# agora-plugin-filters-android

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  build.gradle  settings.gradle
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native.cpp
app/src/main/cpp/agora_rtc_kit/: AgoraBase.h  AgoraExtensionProviderEntry.h  AgoraMediaBase.h  IAgoraService.h  NGIAgoraAudioDeviceManager.h  NGIAgoraExtensionProvider.h  NGIAgoraLocalUser.h
app/src/main/cpp/bnb_sdk/bnb/effect_player/: helpers.hpp  utility.hpp
app/src/main/cpp/bnb_sdk/bnb/effect_player/interfaces/: all.hpp  consistency_mode.hpp  effect_activated_listener.hpp  effect_activation_completion_listener.hpp  effect_info.hpp  effect_info_listener.hpp  effect_manager.hpp  effect_player.hpp  effect_render_type.hpp  frame_data_listener.hpp  types.hpp
app/src/main/cpp/bnb_sdk/bnb/recognizer/interfaces/: all.hpp  face_search_mode.hpp  feature_id.hpp  recognizer.hpp  recognizer_mode.hpp  types.hpp  utility_manager.hpp
app/src/main/cpp/bnb_sdk/bnb/spal/camera/: base.hpp  bin_mocker.cpp  bin_mocker.hpp  cbor_mocker.cpp  cbor_mocker.hpp  ocv_based.cpp  ocv_based.hpp  video_mocker.cpp  video_mocker.hpp
app/src/main/cpp/bnb_sdk/bnb/spal/camera/platform/osx/: camera_mac.hpp  camera_mac.mm
app/src/main/cpp/bnb_sdk/bnb/types/: base_types.hpp  constants.hpp  full_image.hpp  transformation.hpp
app/src/main/cpp/bnb_sdk/bnb/types/interfaces/: all.hpp  feature_parameter.hpp  frame_data.hpp
app/src/main/cpp/bnb_sdk/bnb/utils/: assert.hpp  exceptions.hpp
app/src/main/cpp/bnb_sdk/bnb/utils/interfaces/: all.hpp  types.hpp
app/src/main/cpp/bnb_sdk/bnb/utils/std/: filesystem.hpp
app/src/main/cpp/filter/: BanubaExtensionProvider.cpp  BanubaExtensionProvider.h  BanubaVideoFilter.cpp  BanubaVideoFilter.h  BanubaVideoProcessor.cpp  BanubaVideoProcessor.h
app/src/main/cpp/lib_yuv/libyuv/: convert.h  convert_argb.h  convert_from.h  convert_from_argb.h  planar_functions.h  rotate.h  row.h  scale.h  scale_row.h  video_common.h
app/src/main/cpp/offscreen_effect_player/: CMakeLists.txt
app/src/main/cpp/offscreen_effect_player/cmake/: libyuv.cmake
app/src/main/cpp/offscreen_effect_player/cmake/libyuv/: CMakeLists.txt
app/src/main/cpp/offscreen_effect_player/interfaces/: offscreen_effect_player.hpp  pixel_buffer.hpp
app/src/main/cpp/offscreen_effect_player/libraries/: CmakeLists.txt
app/src/main/cpp/offscreen_effect_player/libraries/renderer/: CMakeLists.txt
app/src/main/cpp/offscreen_effect_player/libraries/renderer/include/: renderer.hpp
app/src/main/cpp/offscreen_effect_player/libraries/renderer/src/: renderer.cpp
app/src/main/cpp/offscreen_effect_player/libraries/utils/ogl_utils/include/: opengl.hpp  program.hpp
app/src/main/cpp/offscreen_effect_player/libraries/utils/ogl_utils/src/: opengl.cpp  program.cpp
app/src/main/cpp/offscreen_effect_player/offscreen_effect_player/: CMakeLists.txt
app/src/main/cpp/offscreen_effect_player/offscreen_effect_player/include/: offscreen_effect_player.hpp
app/src/main/cpp/offscreen_effect_player/offscreen_effect_player/src/: offscreen_effect_player.cpp
app/src/main/cpp/offscreen_effect_player/offscreen_render_target/include/: offscreen_render_target.hpp
app/src/main/cpp/offscreen_effect_player/offscreen_render_target/src/: offscreen_render_target.cpp
app/src/main/plugin_sources/: CMakeLists.txt  plugin_lib.cpp
app/src/main/plugin_sources/agora_rtc_kit/: IAgoraMediaPlayerSource.h  NGIAgoraVideoFrame.h
app/src/main/plugin_sources/filter/: BanubaVideoFilter.cpp  BanubaVideoProcessor.cpp
app/src/main/plugin_sources/offscreen_effect_player/cmake/: libyuv.cmake
app/src/main/plugin_sources/offscreen_effect_player/cmake/libyuv/: Android.mk  CMakeLists.txt
app/src/main/plugin_sources/offscreen_effect_player/interfaces/: formats.hpp  offscreen_effect_player.hpp  offscreen_render_target.hpp
app/src/main/plugin_sources/offscreen_effect_player/libraries/renderer/include/: frame_surface_handler.hpp  render_thread.hpp
app/src/main/plugin_sources/offscreen_effect_player/libraries/renderer/src/: frame_surface_handler.cpp  render_thread.cpp
app/src/main/plugin_sources/offscreen_effect_player/libraries/utils/ogl_utils/: CMakeLists.txt
app/src/main/plugin_sources/offscreen_effect_player/offscreen_effect_player/include/: offscreen_effect_player.hpp  pixel_buffer.hpp
app/src/main/plugin_sources/offscreen_effect_player/offscreen_effect_player/src/: pixel_buffer.cpp
app/src/main/plugin_sources/offscreen_effect_player/offscreen_render_target/: CMakeLists.txt
app/src/main/plugin_sources/offscreen_effect_player/offscreen_render_target/include/: offscreen_render_target.hpp
app/src/main/res/drawable/: ic_circle.xml
app/src/main/res/layout/: activity_launcher.xml  activity_main.xml  activity_sample.xml  item_carousel_effect.xml  view_effects_carousel.xml
app/src/main/res/values/: attrs.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
banuba-agora-plugin/: .gitignore  build.gradle
banuba-agora-plugin/src/main/: AndroidManifest.xml
banuba-agora-plugin/src/main/plugin_sources/: CMakeLists.txt  effect_player.cpp  effect_player.hpp  plugin_lib.cpp  render_context.cpp  render_context.hpp
banuba-agora-plugin/src/main/plugin_sources/filter/: BanubaExtensionProvider.cpp  BanubaExtensionProvider.h  BanubaVideoFilter.cpp  BanubaVideoFilter.h  BanubaVideoProcessor.cpp  BanubaVideoProcessor.h
gradle/wrapper/: gradle-wrapper.properties
libs/: .gitignore  banuba_effect_player-release.aar
libs/bnb_sdk/: .gitignore
libs/bnb_sdk/bnb/effect_player/: helpers.hpp  utility.hpp
libs/bnb_sdk/bnb/effect_player/interfaces/: all.hpp  camera_orientation.hpp  camera_poi_listener.hpp  color_range.hpp  color_std.hpp  (+29 more)
libs/bnb_sdk/bnb/types/: base_types.hpp  constants.hpp  full_image.hpp  pixel_rect.hpp  transformation.hpp
libs/bnb_sdk/bnb/utils/: allocate_unique.hpp  assert.hpp  defs.hpp  event.hpp  exceptions.hpp  singleton.hpp  static_pool_allocator.hpp
libs/jniLibs/: .gitignore
(+416 files in other folders)
